--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Google</title>
 </head>
 <body>
+    <header>
     <nav>
         <ul>
           <li id="left_nav"><a href="#">About</a></li>
@@ -27,7 +28,7 @@
             </li>
         </ul>
     </nav>
-
+    </header>
     <main>
         <div>
             <section class="image">
